2004-08-15	Florian Boor  	<florian.boor@kernelconcepts.de>
	
	* users/interface.c: Improved access control checks.
	* users/interface.c: Added standard headers. Some cleanups.
	  users/callbaks.c
	* battery.c: Minor fix to compensate broken APM emulation.
	
2004-08-14	Florian Boor  	<florian.boor@kernelconcepts.de>
	
	* theme.c: Added casts to fix warnings.
	* tools/interface.c: Removed obsolete stuff, fixed warnings.
	* rotation.c: Removed obsolete variables, fixed warnings.
	* unimplemented.c: Fixed warning.
	* HACKING: Some minor fixes and reordering.
	           Added a small section of tasks.
	* logread.c: Added newline chars to error messages, formating changes.
	* storage.c: Added simple support for storage size report of IDE harddisks.
	* sysinfo.c: GUI improvement of hardware tab.
	* battery.c: Implemented reading of APM status values.
	* Makefile: Fixed machine depending definitions, increased version number.
	* serial.c: Some improvements to work on more systems.
	
2004-08-12	Florian Boor  	<florian.boor@kernelconcepts.de>

	* Released Version 0.1.13
	* applets.c, suid.*: Checks for empty root password now and supresses
	                     dialog in this case.

2004-08-11	Florian Boor  	<florian.boor@kernelconcepts.de>
	
	* logread.c: Session log scrollbars appear only if necessary now.
	* Makefile: Working on V 0.1.13, changed default PREFIX to /usr/local
	* login-setup.c: Removed obsolete #endif
	* suid.c, users/callbacks.c: Implemented removing a users home directory.
	
2004-08-08	Florian Boor  	<florian.boor@kernelconcepts.de>
 
    * brightness.c: Do not set level to 0 on platforms that my have a 
	                non-transflective display.
	* time.c: Reset X screensaver after setting time. Removed obsolete stuff.
	* theme.c: Guessing of better defaults.
	* applets.c: Fixed typo in widget name.

2004-08-06	Florian Boor  	<florian.boor@kernelconcepts.de>

	* applets.c: Fixed behaviour of password dialog and enter key.
